--- a/test.mustache
+++ b/test.mustache
@@ -2,16 +2,16 @@
 <html>
 		<head>
 			<title>Test'em for ctd3.js</title>
+			<link rel="stylesheet" href="/testem/jasmine2.css">
+			<link rel="stylesheet" href="ctd3.css">
 			<script src="/testem/jasmine2.js"></script>
 			<script src="/testem/jasmine2-html.js"></script>
 			<script src="/testem/jasmine2-boot.js"></script>
 			<script src="/testem.js"></script>
 			{{#serve_files}}<script src="{{src}}" charset="UTF-8"></script>{{/serve_files}}
-			<link rel="stylesheet" href="/testem/jasmine2.css">
-			<link rel="stylesheet" href="ctd3.css">
 		</head>
 		<body>
-			<div id="chart_div"></div>
+			<div id="table_div"></div>
 			<br/ style="clear:both;">
 		</body>
 </html>
