--- a/test.mustache
+++ b/test.mustache
@@ -10,6 +10,9 @@
 			<script src="/testem.js"></script>
 			{{#serve_files}}<script src="{{src}}" charset="UTF-8"></script>{{/serve_files}}
 		</head>
+		<style>
+			body{ background-color:white; }
+		</style>
 		<body>
 			<div id="table_div"></div>
 			<br/ style="clear:both;">
