--- a/test.mustache
+++ b/test.mustache
@@ -3,7 +3,7 @@
 		<head>
 			<title>Test'em for ctd3.js</title>
 			<link rel="stylesheet" href="/testem/jasmine2.css">
-			<link rel="stylesheet" href="ctd3.css">
+			<link rel="stylesheet" href="dist/ctd3.css">
 			<script src="/testem/jasmine2.js"></script>
 			<script src="/testem/jasmine2-html.js"></script>
 			<script src="/testem/jasmine2-boot.js"></script>
